0.3.2 (dev)
  BugFix: WM testing code now uses ps -aux. 
  BugFix: Test also if doas.conf is available at startup.
  BugFix: Disable Info/Files tab refresh while typing in filter/search line edit.
  BugFix: Updated FreeBSD rss url.
  BugFix: Package search did not work correctly when query string contained a "+" sign.
  Synced octopkg-doas with LXQt-sudo 1.1.0 version.
  Changed "Sync database" option name to "Check updates".
  Actions tab shows a counter feedback for inserts (with a plus signal) and 
    removals (with a minus signal) and does not steal focus anymore.
  Added support for "^" and "$" characters in remote searches. 

0.3.1 (2020/10/29)
  Added "Installed On" column on installed package list.
  Make locate work with "search by file", giving suggestions on a popup window.
  Make code compatible with Qt 5.15 version. 
  BugFix: updated install dir of octopkg-doas to /usr/local/lib/octopkg.
  BugFix: removed "/" char option when "Search by File" was selected before searching 
  	for a remote pkg.

0.3.0 (2020/07/18)
  BugFix in GhostBSD repo guessing;
  BugFix: Package list does not flashes at program startup anymore.
  BugFix: Do not offer to open "LSB relocatable" files at File tab.
  BugFix: anchor output when pkg list is empty.
  BugFix: TransactionDialog was size constrained.
  BugFix: Use of "ReInstall" and "Update" texts instead of just generic "Install" text 
	on package list context menus.
  BugFix: DragonFlyBSD support updated!
  BugFix: Let exit menu and close button enabled for cancelling running actions.
  BugFix: Sort by icon column works better now.
  BugFix: Use a more aggressive UI lockdown approach during actions.
  Faster startup time thanks to deferred retrieval of outdated packages.
  Added option to create backup boot environments before upgrades when root is on ZFS.
  Added support to HardenedBSD.
  Added GNOME desktop support.
  Added Lumina desktop support.
  Added Info option on package list context menu.