@@ -186,13 +186,13 @@ void MainWindow::deferredInitAppIcon()
     ui->tvPackages->setCurrentIndex(maux);
   }
 
-  invalidateTabs();
   refreshAppIcon();
   refreshStatusBar();
+  invalidateTabs();
 
   connect(ui->tvPackages, SIGNAL(clicked(QModelIndex)), this, SLOT(invalidateTabs()));
-  //connect(ui->tvPackages->selectionModel(), SIGNAL(selectionChanged(QItemSelection,QItemSelection)),
-  //        this, SLOT(invalidateTabs()));
+  //disconnect(ui->tvPackages->selectionModel(), SIGNAL(selectionChanged(QItemSelection,QItemSelection)),
+  //            this, SLOT(invalidateTabs()));
 }
 
 /*
@@ -1057,17 +1057,37 @@ void MainWindow::onDoubleClickPackageList()
 }
 
 /*
- * When the user changes the current selected tab, we must take care of data refresh.
+ * Whenever user selects a package in the pkg list
  */
-void MainWindow::changedTabIndex()
+void MainWindow::refreshInfoAndFileTabs()
 {
+  disconnect(ui->tvPackages->selectionModel(), SIGNAL(selectionChanged(QItemSelection,QItemSelection)),
+          this, SLOT(invalidateTabs()));
+
   if(ui->twProperties->currentIndex() == ctn_TABINDEX_INFORMATION)
     refreshTabInfo();
   else if (ui->twProperties->currentIndex() == ctn_TABINDEX_FILES)
     refreshTabFiles();
 
   if(m_initializationCompleted)
-    saveSettings(ectn_CurrentTabIndex);
+    saveSettings(ectn_CURRENTTABINDEX);
+}
+
+/*
+ * When the user changes the current selected tab, we must take care of data refresh.
+ */
+void MainWindow::changedTabIndex()
+{
+  disconnect(ui->tvPackages->selectionModel(), SIGNAL(selectionChanged(QItemSelection,QItemSelection)),
+             this, SLOT(invalidateTabs()));
+
+  if(ui->twProperties->currentIndex() == ctn_TABINDEX_INFORMATION)
+    refreshTabInfo();
+  else if (ui->twProperties->currentIndex() == ctn_TABINDEX_FILES)
+    refreshTabFiles();
+
+  if(m_initializationCompleted)
+    saveSettings(ectn_CURRENTTABINDEX);
 }
 
 /*
@@ -1075,9 +1095,6 @@ void MainWindow::changedTabIndex()
  */
 void MainWindow::clearTabsInfoOrFiles()
 {
-  disconnect(ui->tvPackages->selectionModel(), SIGNAL(selectionChanged(QItemSelection,QItemSelection)),
-          this, SLOT(invalidateTabs()));
-
   if(ui->twProperties->currentIndex() == ctn_TABINDEX_INFORMATION) //This is TabInfo
   {
     refreshTabInfo(true, false);
@@ -1088,9 +1105,6 @@ void MainWindow::clearTabsInfoOrFiles()
     refreshTabFiles(true, false);
     return;
   }
-
-  connect(ui->tvPackages->selectionModel(), SIGNAL(selectionChanged(QItemSelection,QItemSelection)),
-          this, SLOT(invalidateTabs()));
 }
 
 /*
@@ -1098,6 +1112,9 @@ void MainWindow::clearTabsInfoOrFiles()
  */
 void MainWindow::invalidateTabs()
 {
+  disconnect(ui->tvPackages->selectionModel(), SIGNAL(selectionChanged(QItemSelection,QItemSelection)),
+                this, SLOT(invalidateTabs()));
+
   if(ui->twProperties->currentIndex() == ctn_TABINDEX_INFORMATION) //This is TabInfo
   {
     refreshTabInfo(false, false);
@@ -1105,9 +1122,12 @@ void MainWindow::invalidateTabs()
   }
   else if(ui->twProperties->currentIndex() == ctn_TABINDEX_FILES) //This is TabFiles
   {
-    refreshTabFiles(false, false);
+    refreshTabFiles();
     return;
   }
+
+  //connect(ui->tvPackages->selectionModel(), SIGNAL(selectionChanged(QItemSelection,QItemSelection)),
+  //        this, SLOT(invalidateTabs()));
 }
 
 /*
@@ -1254,7 +1274,7 @@ void MainWindow::headerViewPackageListSortIndicatorClicked( int col, Qt::SortOrd
   connect(ui->tvPackages->header(), SIGNAL(sortIndicatorChanged(int,Qt::SortOrder)), this,
           SLOT(headerViewPackageListSortIndicatorClicked(int,Qt::SortOrder)));
 
-  saveSettings(ectn_PackageList);
+  saveSettings(ectn_PACKAGELIST);
 }
 
 /*
