@@ -349,6 +349,7 @@ private slots:
   void refreshTabFiles(bool clearContents=false, bool neverQuit=false);
   void onDoubleClickPackageList();
   void changedTabIndex();
+  void refreshInfoAndFileTabs();
   void clearTabsInfoOrFiles();
   void invalidateTabs(); //This method clears the current information showed on tab.
 
