@@ -683,6 +683,11 @@ void MainWindow::showPackagesWithNoDescription()
  */
 void MainWindow::buildPackageList()
 {
+  disconnect(ui->tvPackages->selectionModel(), SIGNAL(selectionChanged(QItemSelection,QItemSelection)),
+              this, SLOT(invalidateTabs()));
+  connect(ui->tvPackages->selectionModel(), SIGNAL(selectionChanged(QItemSelection,QItemSelection)),
+              this, SLOT(invalidateTabs()));
+
   CPUIntensiveComputing cic;
   /*static QStandardItemModel emptyModel;
   if (!m_initializationCompleted)
@@ -751,6 +756,9 @@ void MainWindow::buildPackageList()
   m_progressWidget->setValue(counter);
   m_progressWidget->close();
   m_packageRepo.setData(list, *m_unrequiredPackageList);
+
+  removePackageTreeViewConnections();
+  initPackageTreeView();
 
   if(m_debugInfo)
     std::cout << "Time elapsed setting the list to the treeview: " << m_time->elapsed() << " mili seconds." << std::endl;
@@ -1323,8 +1331,6 @@ void MainWindow::refreshTabFiles(bool clearContents, bool neverQuit)
 void MainWindow::reapplyPackageFilter()
 {
   clearTabsInfoOrFiles();
-  disconnect(ui->tvPackages->selectionModel(), &QItemSelectionModel::selectionChanged,
-            this, &MainWindow::invalidateTabs);
 
   if (m_actionSwitchToRemoteSearch->isChecked())
   {
@@ -1365,7 +1371,6 @@ void MainWindow::reapplyPackageFilter()
     QModelIndex mi = m_packageModel->index(0, PackageModel::ctn_PACKAGE_NAME_COLUMN, QModelIndex());
     ui->tvPackages->setCurrentIndex(mi);
     ui->tvPackages->scrollTo(mi);
-    //clearTabsInfoOrFiles();
   }
   //If we are using "Search By file...
   else
@@ -1380,9 +1385,6 @@ void MainWindow::reapplyPackageFilter()
 
     connect(m_leFilterPackage, SIGNAL(textChanged(QString)), this, SLOT(reapplyPackageFilter()));
   }
-
-  connect(ui->tvPackages->selectionModel(), &QItemSelectionModel::selectionChanged,
-            this, &MainWindow::invalidateTabs);
 }
 
 /*
