@@ -35,6 +35,7 @@ public:
 
 protected:
   virtual void mouseReleaseEvent(QMouseEvent *event);
+  virtual void focusInEvent(QFocusEvent *event);
 
 };
 
