@@ -4,6 +4,7 @@
   BugFix: Disable Info/Files tab refresh while typing in filter/search line edit.
   BugFix: Updated FreeBSD rss url.
   BugFix: Package search did not work correctly when query string contained a "+" sign.
+  BugFix: Refresh of Info/File tabs and focus/key navigation improvements.
   Synced octopkg-doas with LXQt-sudo 1.1.0 version.
   Changed "Sync database" option name to "Check updates".
   Actions tab shows a counter feedback for inserts (with a plus signal) and 
